# cobalt

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  benchmark.sh  build.rs  build.sh  clean.sh  run.sh  test.sh
.github/workflows/: unit_tests.yml
benchmarks/: fibonacci.toml  fizzbuzz.toml  primality.toml  questionmarks.toml  rot13.toml
crates/bench/: Cargo.toml
crates/compiler/: Cargo.toml
crates/compiler/src/: cli.rs  config.rs  main.rs
crates/compiler/src/commands/: build.rs  mod.rs
crates/compiler/src/compiler/: mod.rs
crates/compiler/src/compiler/codegen/: block.rs  data.rs  func.rs  intrinsics.rs  isa.rs  mod.rs  utils.rs
crates/compiler/src/compiler/codegen/func/: cond.rs  io.rs  math.rs  memory.rs  mod.rs  value.rs  var.rs
crates/compiler/src/compiler/codegen/translate/: cond.rs  control.rs  intrinsics.rs  io.rs  math.rs  memory.rs  mod.rs  value.rs
crates/compiler/src/compiler/parser/: ast.rs  data.rs  divs.rs  err.rs  expr.rs  lits.rs  mod.rs  stat.rs  token.rs
crates/compiler/src/compiler/parser/stat/: cond.rs  control.rs  intrinsics.rs  math.rs  mod.rs
crates/compiler/src/linker/: mod.rs  platform.rs
crates/compiler/src/tests/: control.rs  data.rs  intrinsics.rs  io.rs  maths.rs  memory.rs  mod.rs
crates/compiler/src/tests/common/: mod.rs
crates/intrinsics/: Cargo.toml
crates/intrinsics/src/: lib.rs
examples/: arithmetic.cobol  branching.cobol  data_layout.cobol  intrinsics.cobol  test.txt
examples/algorithms/: fibonacci.cobol  fizzbuzz.cobol  rot13.cobol  (+2 more)
scripts/: flame.sh  gadgets.sh
src/: cli.rs  config.rs  main.rs
(+33 files in other folders)
