[package]
name = "cobalt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "1.0.0-alpha.6"
clap = { version = "4.5.1", features = ["derive"] }
cranelift = "0.105.1"
cranelift-module = "0.105.3"
cranelift-native = "0.105.3"
cranelift-object = "0.105.3"
miette = { version = "7.1.0", features = ["fancy"] }
