[package]
name = "cobalt"
version = "0.1.0"
edition = "2021"

[dependencies]
bimap = "0.6.3"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
cranelift = "0.105.1"
cranelift-module = "0.105.3"
cranelift-native = "0.105.3"
cranelift-object = "0.105.3"
logos = "0.14.0"
miette = { version = "7.1.0", features = ["fancy"] }
regex = "1.10.4"
thiserror = "1.0.58"
