[lib]
crate-type = [ "staticlib" ]

[package]
name = "cobalt_intrinsics"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
libc = "0.2.153"
libc-print = "0.1.22"
libc_alloc = "1.0.7"
once_cell = { version = "1.19.0", features = ["alloc"], default-features = false }
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
